<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/default_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:rowCount="9" >

    <LinearLayout
        android:id="@+id/linear_layout_0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="0" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_row="1" >

        <Button
            android:id="@+id/test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_row="2" >

        <Button
            android:id="@+id/test_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/textview_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_row="3" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/brightness_message" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_row="4" >

        <SeekBar
            android:id="@+id/brightness_control"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_row="5" >

         <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_row="6" >

        <Switch  android:id="@+id/night_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textOff="OFF"
        android:textOn="ON"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_row="7" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume_message" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_row="8" >

        <SeekBar
            android:id="@+id/volume_control"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50" />
    </LinearLayout>

</GridLayout>